# bento

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREATING_BLOCKS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
bento_app/: __init__.py  __main__.py  block_loader.py  cli.py  command_palette.py  config.py  dev_tools.py  first_run.py  hotkey.py  notify.py  placeholder_widgets.py  settings.py  testing.py  tray.py  window.py
bento_app/blocks/: __init__.py  base_block.py
bento_app/builtin_blocks/demo/: block.py  manifest.json
helpers/: CMakeLists.txt  bento-hotkey-helper  bento_hotkey_helper.cpp
packaging/: PKGBUILD  PKGBUILD-git  bento.desktop  org.github.habirabbu.bento.metainfo.xml  org.github.habirabbu.bento.yml
tests/: conftest.py  test_block_loader.py  test_block_testing_utils.py  test_cli.py  test_command_palette.py  test_config.py  test_first_run.py  test_fuzzy_match.py  test_hot_reload.py  test_manifest.py  test_notify.py  test_placeholder_widgets.py  test_smoke.py  test_window_cycling.py
